<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="?attr/actionBarSize">

    <!-- TODO: Update blank fragment layout -->

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946">

    </org.osmdroid.views.MapView>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextOne"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:drawableStart="@android:drawable/ic_menu_mylocation"
        android:hint="location"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.0"
        android:imeOptions="actionDone"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextTwo"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="540dp"
        android:drawableStart="@android:drawable/ic_menu_compass"
        android:hint="destination"
        android:inputType="text"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextOne"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/simpleButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#30297E"
        android:text="Go"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextTwo" />

    <TextView
        android:id="@+id/outpTime"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_marginStart="25dp"
        android:gravity="center"
        android:textColor="#B706F8"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toTopOf="@id/map" />

    <RadioButton
        android:id="@+id/centloc"
        android:layout_width="29dp"
        android:layout_height="31dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="460dp"
        android:drawableLeft="@android:drawable/ic_menu_mylocation"
        android:gravity="center"
        android:textColorHighlight="#042AE8"
        android:textColorLink="#0141E4"
        app:iconPadding="1dp"
        app:iconTint="#673AB7"
        app:layout_constraintStart_toStartOf="@id/simpleButton"
        app:layout_constraintTop_toTopOf="@id/simpleButton" />

    <Button
        android:id="@+id/clearbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:width="100dp"
        android:height="30dp"
        android:backgroundTint="#EC0606"
        android:text="CLEAR"
        android:textColor="#EBCFF1"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@id/simpleButton"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteTextTwo" />

    <ImageButton
        android:id="@+id/clocstart"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:clickable="true"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="@+id/autoCompleteTextOne"
        app:layout_constraintTop_toTopOf="@id/autoCompleteTextOne"
        android:src="@drawable/icons850"  />


</androidx.constraintlayout.widget.ConstraintLayout>